--- a/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
@@ -101,15 +101,15 @@ Creating key figures from the dashboard:
 . Click on *Edit view* (icon:design_inline_edit[set=plenty]). +
 → The settings menu opens.
 . Drag-and-drop an element from the settings menu on the dashboard.
-. Move the cursor over the element and click on (icon:design_inline_edit[set=plenty]). +
+. Move the cursor over the element and click on )icon:design_inline_edit[set=plenty]). +
 → The settings menu for the element opens.
 . Drag-and-drop an element within the area outlined in blue.
-. Move the cursor over the element and click on (icon:design_inline_edit[set=plenty]).
+. Move the cursor over the element and click on )icon:design_inline_edit[set=plenty]).
 . In the settings menu, click on *Key figure* and select the option *New key figure*. +
 → A window for setting up the new key figure opens.
 . Enter a *name* for the key figure.
 . Carry out the settings according to <<table-create-key-figures>>.
-. Click on *Save* (icon:save[role="green"]).
+. Click on *Save* (icon:save[set=plenty]).
 
 IMPORTANT: When creating key figures on the dashboard, it is not possible to set up xref:business-decisions:myview-dashboard.adoc#intable-targetvalue[target values] for those key figures. However, you can later add those settings for the key figure in the *Setup » plentyBI » Key figures* menu.
 --
@@ -200,7 +200,7 @@ include::_includes:partial$myview-editing-mode.adoc[]
 [#408]
 === Assigning rights for dashboard views
 
-Decide which users should see the default view.  You can also restrict or allow access for additional dashboard views per user or user role. Note that users of the type *Back end* cannot edit dashboard views or create new views even if they have been assigned those rights.
+Decide which users should see the default view.  You can also restrict or allow access for additional dashboard views per user or user role. Note that users or roles of the type *Back end* cannot edit dashboard views or create new views, even if they have been assigned those rights.
 
 Open the editing mode (icon:design_inline_edit[set=plenty]) for an already existing <<#407, dashboard view>>. Click on *Rights management* to access the settings for users and user roles and decide which dashboard view(s) should be visible for them.
 
@@ -268,7 +268,7 @@ Placing areas and elements on the dashboard:
 . Go to *plentymarkets logo (Start) » Dashboard*.
 . Click on *Edit view* (icon:design_inline_edit[set=plenty]).
 . Drag-and-drop an element from the settings menu on the dashboard.
-. Move the cursor over the element and click on *Edit* (icon:design_inline_edit[set=plenty]). +
+. Move the cursor over the element and click on *Edit* (icon:edit[set=plenty]). +
 → The settings menu opens. +
 → The possible elements for the area are displayed.
 . Select an element from the settings menu and drag-and-drop it within the area on the dashboard.
@@ -315,7 +315,7 @@ include::partial$new-dashboard-element.adoc[]
 | Use the search field to enter the name of the key figure configuration and select an entry to display the key figure on the tile. Alternatively, click on *Create new key figure* (icon:plus[role="green"]) to create a new key figure.
 
 | *Title*
-| Enter an appropriate title. The title is displayed as name on the tile. Click on (icon:eye[role="lightGrey"]) if no title should be displayed.
+| Enter an appropriate title for the tile. The title is displayed as name on the tile. Click on (icon:eye[role="lightGrey"]) if no title should be displayed.
 
 | *Period*
 | Select the period of time for which the data of the key figure should be considered.
@@ -337,8 +337,8 @@ include::partial$new-dashboard-element.adoc[]
 | Decide if the unit of the key figure should be displayed on the tile.
 
 | *Conditional colouring*
-a| Do you want to display the tile in a particular colour? To do so, select the option *Display* and click on (icon:settings[set=material]). A settings window opens. On the left, select the colour for the tile. If you want the colour of the tile to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
-*_Optional:_* Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the tile. You can enter two types of links: +
+a| Do you want to display the tile in a particular colour? Select the option *Display* and click on (icon:settings[set=material]). A settings window opens. On the left, select the colour for the tile. If you want the colour of the tile to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
+*_Optional:_*Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the tile. You can enter two types of links: +
 
 * Internal link: An internal link opens a menu within the back end of your plentymarkets system. To do so, enter the route of the menu that should be opened beginning with a */*. The link has to include everything displayed in the URL of the menu after the `terra` component. +
 *_Example:_* If the order overview should be opened when clicking on the button, enter the link `/order/order-search`. +
@@ -347,11 +347,11 @@ a| Do you want to display the tile in a particular colour? To do so, select the 
 *_Tip:_* Click on (icon:plus[role="green"]) to save further conditions for different colours.
 
 | *Custom shortcuts*
-| Use this setting to add a customised option to the *Actions* menu (icon:more_vert[set=material, role=blue]) on the tile. You can also determine conditions that have to be fulfilled for the option to be displayed, and decide what happens if users click on the option. +
+| Use this setting to add a customised option to the *Actions* (icon:more_vert[set=material]) menu on the tile. You can also determine conditions that have to be fulfilled for the option to be displayed, and decide what happens if users click on the option. +
 Click on (icon:settings[role=darkGrey]) to add one or more shortcuts.
 
 | [#intable-tile-details]*Link to detailed dashboard view*
-| Select which already existing dashboard view should be opened of you open the *Actions* menu icon:more_vert[set=material, role=blue] on the tile and select the option *Tile details*. +
+| Select which already existing dashboard view should be opened when users click on the *Actions* menu (icon:more_vert[set=material]) on the tile and select the option *Tile details*. +
 If you select the option *None*, a default dashboard view provided by the system is opened when you clicked on *Tile details*. This dashboard view contains more detailed information on the results and the data of the key figure that has been selected as a basis of the tile.
 
 | *Parameters for detailed view*
@@ -452,7 +452,7 @@ Carrying out settings for rows:
 | Decide if the unit of the key figure should be displayed in the row.
 
 | *Conditional colouring*
-a| Do you want to display the row in a particular colour? To do so, select the option *Display* and click on (icon:settings[set=material]). A settings window opens. On the left, select the colour for the row. If you want the colour of the tile to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
+a| Do you want to display the row in a particular colour? Select the option *Display* and click on (icon:settings[set=material]). A settings window opens. On the left, select the colour for the row. If you want the colour of the tile to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
 *_Optional:_* Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the row. You can enter two types of links: +
 
 * Internal link: An internal link opens a menu within the back end of your plentymarkets system. To do so, enter the route of the menu that should be opened beginning with a */*. The link has to include everything displayed in the URL of the menu after the `terra` component. +
@@ -462,11 +462,11 @@ a| Do you want to display the row in a particular colour? To do so, select the o
 *_Tip:_* Click on (icon:plus[role="green"]) to save further conditions for different colours.
 
 | *Custom shortcuts*
-| Use this setting to add a customised option to the *Actions* menu (icon:more_vert[set=material]) on the row. You can also determine conditions that have to be fulfilled for the option to be displayed, and decide what happens if users click on the option. +
+| Use this setting to add a customised option to the *Actions* (icon:more_vert[set=material]) menu next to the row. You can also determine conditions that have to be fulfilled for the option to be displayed, and decide what happens if users click on the option. +
 Click on (icon:settings[role=darkGrey]) to add one or more shortcuts.
 
 | [#intable-row-details]*Link to detailed dashboard view*
-| Select which already existing dashboard view should be opened when users click on the *Actions* (icon:more_vert[set=material] menu next to the row and select the option *Row details*. +
+| Select which already existing dashboard view should be opened when users click on the *Actions* (icon:more_vert[set=material]) menu next to the row and select the option *Tile details*. +
 If you select the option *None*, a default dashboard view provided by the system is opened when you click on *Row details*. This dashboard view contains more detailed information on the results and the data of the key figure that has been selected as the basis of the row.
 
 | *Parameters for detailed view*
@@ -580,7 +580,7 @@ After you have placed a table on the dashboard, several options are available to
 [.instruction]
 Viewing and exporting table data:
 
-. Click on (icon:more_vert[set=material]) in the upper right corner of the table. +
+. Click on (icon:more_vert[set=material]) in the top right corner of the table. +
 → The context menu opens.
 . Select which action you want to carry out for the table. The following table explains the available options.
 
@@ -653,7 +653,7 @@ Carrying out settings for combined tables:
 | Depending on the number of entries, the table can be displayed on several pages. Select if *10*, *25*, *50*, *75* or *100* entries should be displayed per page.
 
 | *Conditional colouring*
-| Do you want to display the table in a particular colour? To do so, select the option *Display* and click on (icon:settings[set=material]). A new settings window opens. On the left, select the colour for the table. If you want the colour of the table to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
+| Do you want to display the table in a particular colour? Select the option *Display* and click on (icon:settings[set=material]). A new settings window opens. On the left, select the colour for the table. If you want the colour of the table to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
 *_Tip:_* Click on (icon:plus[role="green"]) to save further conditions for different colours.
 |====
 
@@ -667,7 +667,7 @@ After you have placed a combined table on the dashboard, several options are ava
 [.instruction]
 Viewing and exporting combined table data:
 
-. Click on (icon:more_vert[set=material]) in the upper right corner of the table. +
+. Click on (icon:more_vert[set=material]) in the top right corner of the table. +
 → The context menu opens.
 . Select which action you want to carry out for the table. The following table explains the available options.
 
@@ -1165,7 +1165,7 @@ As soon as you have placed graphs on your dashboard, additional functions appear
 [.instruction]
 Viewing and exporting graph data:
 
-. In the upper right corner of the graph, click on (icon:more[set=material]). +
+. On the upper right corner of the graph, click on (icon:more_vert[set=material]). +
 → The context menu opens.
 . Select which action you want to carry out for the graph. The following table explains the available options.
 
@@ -1175,7 +1175,7 @@ Viewing and exporting graph data:
 |====
 |Option |Explanation
 
-| * Save image*
+| *Save image*
 | Downloads the content currently displayed by the graph as an image. Select one of the options *PNG*, *JPG*, *SVG* or *PDF* to determine the format of the image file.
 
 | *Print*
@@ -1286,11 +1286,11 @@ Then, you can copy already existing elements in an area and paste it to the same
 [.instruction]
 Copying an element:
 
-. Open the editing mode of the dashboard view (icon:design_inline_edit[set=plenty]).
+. Open the editing mode for the dashboard view (icon:design_inline_edit[set=plenty]).
 . Open the editing mode of the area (icon:pencil[role="blue"]).
 . Move the cursor over the element that you want to copy.
 . Click on *Copy* (icon:content_copy[set=material, role=”blue”]).
-. On the upper right corner of the area, click on *Paste* (icon:content_paste[set=material, role="blue"]). +
+. On the upper right corner of the area, click on *Paste*(icon:content_paste[set=material, role="blue"]). +
 → The element is added.
 . Move the cursor over the new element and click on *Edit* (icon:pencil[role="blue"]) to adjust the settings for the element.
 . *Save* (icon:save[set=plenty]) the settings.
@@ -1318,7 +1318,114 @@ Changing the global time interval of the dashboard:
 [TIP]
 .Recommended position for the element
 ====
-The *Global time interval* element can only be added to each dashboard view once. Thus, we recommend that you place the element in a position that is easy to see. In most cases, placing the element above all other elements is the best solution.
+The *Global time interval* element can only be added to each dashboard view once. Thus, we recommend that you place the element in a position that is easy to see.
+====
+
+[#850]
+=== Using global filters
+
+In the <<#840, previous chapter>>, you learned how to adjust the time interval for data displayed on the dashboard. 
+
+The *Global filters* element offers you numerous additional ways to filter the data on your dashboard. After you have carried out all settings, the global filters are displayed permanently. This helps you to keep an overview. In many cases, setting up global filters will save you the effort of having to create an entirely new dashboard view.
+
+In the following chapters, you will learn <<#851, how to place the element on the dashboard>> and how to determine once in advance <<#852, which filters should be available>>. In addition, you can set up <<#855, pre-defined default filters>> that will be applied automatically every time the dashboard view is opened.
+
+[#851]
+==== Adding the element
+
+To use global filters, you first need to place the respective element on your dashboard.
+
+[.instruction]
+Adding the element:
+
+. Go to *plentymarkets logo (Start) » Dashboard*.
+. Click on *Edit view* (icon:design_inline_edit[set=plenty]).
+. Use drag-and-drop to place the *Global time interval* element on the dashboard.
+. *Save* (icon:save[set=plenty]) the settings.
+
+[TIP]
+.Recommended position for the element
+====
+The *Global filters* element can only be added once to each dashboard view. Thus, we recommend that you place the element in a position that is easy to see.
+====
+
+[#852]
+==== Carrying out filter settings
+
+After you have placed the *Global filters* element on the dashboard, carry out more detailed settings. Select which filters should be available and which search criteria should be displayed for each filter.
+
+[.instruction]
+Carrying out filter settings:
+
+. Click on *Edit* (icon:edit[set=plenty]) in the top right corner of the *Global filters* element. +
+→ The settings menu opens.
+. Carry out the settings for the element. Note the explanations provided further down in this chapter.
+. *Save* (icon:save[set=plenty]) the settings.
+
+[IMPORTANT]
+.Which filters are available?
+====
+The filters available in the settings menu of the *Global filters* element depend on the key figures that are displayed on the respective dashboard view. More precisely, the available filters are the exact same filters that you have selected in the key figure configurations. +
+*_Example:_* If one or more key figures have been set up with the filter *Shipping profile*, this filter will be available and you can carry out settings for this filter. Accordingly, filters that are not used in any of your key figure configurations are not displayed in the settings menu.
+====
+
+As an example, <<image-global-filters>> shows a list of filters that can be available for the *Global filters* element.
+
+.Example: Available filters
+[[image-global-filters]]
+image::business-decisions:global-filter-settings-1.png[width=640, height=360]
+
+First, activate (icon:check-square[role="blue"]) the filters that should be available for use in the element later.
+
+For most filters, you can click on *Edit* (icon:edit[set=plenty, role="darkGrey"]) to determine which search criteria should be displayed for each filter. This way, you avoid having to scroll through long drop-down lists and the filter can be used quickly later. Activate (icon:check-square[role="blue"]) the search criteria that you need. <<image-global-filter-settings>> shows a sample selection of criteria for the *Invoice country* filter.
+
+.Example: Selection of filter criteria
+[[image-global-filter-settings]]
+image::business-decisions:global-filter-settings-2.png[width=640, height=360]
+
+[#853]
+==== Applying filters
+
+After saving the settings, filters for which the settings described above are carried out are displayed on the dashboard as shown in <<image-global-filter-display>>.
+
+.Example: Display of filters
+[[image-global-filter-display]]
+image::business-decisions:global-filter-settings-3.png[width=640, height=360]
+
+Now, you can apply this filter every time you access the dashboard.
+
+[.instruction]
+Applying filters:
+
+. Click on *Filter* (icon:tune[set=material, role="darkGrey"]).
+. Click on (icon:chevron-right[role="darkGrey"]) at the right of the desired filter. +
+→ The search criteria that are possible for this filter are displayed.
+. Activate (icon:check-square[role="blue"]) one or more criteria. +
+*_Tip:_* Click on the operator to the left of the name of the criterion to further adjust the behaviour of the filter.
+. Click on *Apply*. +
+→ The filter is applied and the dashboard view is reloaded. Afterwards, the filtered data is displayed. +
+*_Tip:_* The filter criteria that are currently applied are displayed at the top as so-called “chips”. Click on icon:clear[set=material, role="darkGrey"] to delete the filter.
+
+[#855]
+==== Using default filters
+
+Do you prefer to automatically filter the data of the dashboard view according to specific filter criteria when opening the view instead of <<#853, applying the filter manually>> each time? Proceed as described below to carry out the necessary settings.
+
+[.instruction]
+Using default filters:
+
+. Go to *plentymarkets logo (Start) » Dashboard*.
+. Click on *Edit view* (icon:design_inline_edit[set=plenty]).
+. Go to the *Global filter* section.
+. Click on *Filter* (icon:tune[set=material, role="darkGrey"]).
+. Select the filter and criteria that should be used to filter the data of the dashboard view every time the view is opened. To do so, proceed <<#853, as described above>>.
+. *Save* (icon:save[set=plenty]) the settings. +
+→ The default filter is applied. 
+
+[TIP]
+.Removing default filters
+====
+Do you want to remove a previously set up default filter? To do so, open the editing mode of the dashboard and click on icon:clear[set=material, role="darkGrey"] at the right side of the filter. Then, click on icon:search[role="darkGrey"] to update the filter. Finally, *save* your settings. This way, the default filter will be removed. Proceed as <<#855, described above>> to add new filters.
 ====
 
 [#900]
