UPDATE plenty bi messages page

--- a/docs/en-gb/modules/business-decisions/pages/messages-raw-data.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/messages-raw-data.adoc
@@ -2,6 +2,7 @@
 :keywords: messages, report, raw data
 :id: 3ROK81J
 :author: team-crm
+:page-aliases: messages.adoc
 
 :dataFormat: pass:quotes[*messages*]
 :data: Messages from the messenger
