update files (health check)

--- a/docs/de-de/modules/crm/pages/e-mails-versenden.adoc
+++ b/docs/de-de/modules/crm/pages/e-mails-versenden.adoc
@@ -729,7 +729,7 @@ Klappe den Bereich *Weitere an den Kunden gesendete E-Mails...* auf, um alle E-M
 
 Im Menü *plentymarkets Logo (Start) » Statistik* erstellst du eine neue Statistik und wählst im Bereich *Aufträge* den Statistiktyp *Versendete E-Mail-Vorlagen*. Du erhältst somit Informationen der über dein plentymarkets System versendeten E-Mails mit der ID und dem Namen der E-Mail-Vorlage sowie der datumsbezogenen Anzahl der E-Mails. Die Standardeinstellung der Zeitspanne beträgt die letzten 30 Tage. Du kannst die Zeitspanne jedoch auch anpassen oder ein Startdatum und ein Enddatum wählen.
 
-Anhand dieser Statistik kannst du erkennen, welche E-Mail-Vorlage in welchem Zeitraum genutzt wurde und welche Vorgänge besonders häufig oder selten ausgeführt werden. Weitere Informationen dazu findest du auf der Handbuchseite xref:business-entscheidungen:statistiken.adoc#[Statistik].
+Anhand dieser Statistik kannst du erkennen, welche E-Mail-Vorlage in welchem Zeitraum genutzt wurde und welche Vorgänge besonders häufig oder selten ausgeführt werden. Weitere Informationen dazu findest du auf der Handbuchseite xref:daten:statistiken.adoc#[Statistik].
 
 
 [#4000]
