--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -539,7 +539,7 @@ Tags einer Konversation zuweisen:
 [#tag-hinzufuegen]
 ==== Tag hinzufügen
 
-Wenn du den gesuchten Tag nicht gefunden hast, wie im Kapitel <<#kontextmenue-tags, Tags zuweisen>> beschrieben, kannst du aus der Übersicht des Messengers heraus einen neuen Tag erstellen. Gehe dazu wie im Folgenden beschrieben vor.
+Wenn du den gesuchten Tag nicht gefunden hast, wie im Kapitel <<#kontextmenue-tags-konversation, Tags zuweisen>> beschrieben, kannst du aus der Übersicht des Messengers heraus einen neuen Tag erstellen. Gehe dazu wie im Folgenden beschrieben vor.
 
 [.instruction]
 Neuen Tag erstellen:
@@ -910,7 +910,7 @@ Auch im Bereich *Neue Nachrichten* kannst du die Gruppenfunktion nutzen. Die Gru
 [#meine-nachrichten]
 == Meine Nachrichten
 
-In der Navigation auf der linken Seite des Messengers findest du unterhalb des Ordners icon:inbox[set=material, role=darkGrey] *Posteingang* den Ordner icon:3p[set=material, role=darkGrey] *Meine Nachrichten*. Hier siehst du alle Konversationen, die du <<#konversationen-abonnieren, abonniert>> hast. 
+In der Navigation auf der linken Seite des Messengers findest du unterhalb des Ordners icon:inbox[set=material, role=darkGrey] *Posteingang* den Ordner icon:3p[set=material, role=darkGrey] *Meine Nachrichten*. Hier siehst du alle Konversationen, die du <<#konversation-abonnieren, abonniert>> hast. 
 
 [discrete]
 [#spalten-konfigurieren-meine-nachrichten]
