--- a/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
@@ -458,7 +458,7 @@ Geschäftsvorfälle verwalten:
 
 |====
 
-[180]
+[#180]
 ==== Inaktive Geschäftsvorfälle laden
 
 Wenn auf deinem Konto Zahlungen eingehen, deren Geschäftsvorfall du nicht aktiviert hast, können diese vom EBICS-Plugin nicht erfasst werden. Füge diese Geschäftsvorfälle deinem Konto hinzu.
@@ -558,7 +558,7 @@ Land*
 
 | *X-Achse;  +
 Y-Achse*
-|Die Werte orientieren sich am Koordinatensystem mit X- und Y-Achse. Die X-Achse verläuft von links nach rechts und die Y-Achse von oben nach unten. Die Nullpunkte liegen also links oben. Weitere Informationen zum Koordinatensystem unter xref:payment:bankdaten-verwalten.adoc#50[Dokumentenvorlagen].
+|Die Werte orientieren sich am Koordinatensystem mit X- und Y-Achse. Die X-Achse verläuft von links nach rechts und die Y-Achse von oben nach unten. Die Nullpunkte liegen also links oben. Weitere Informationen zum Koordinatensystem findest du unter xref:payment:bankdaten-verwalten.adoc#230[Dokumentenvorlagen].
 
 | *Schriftgröße*
 |Schriftgröße in Pixeln wählen.
