--- a/docs/de-de/modules/payment/pages/ebics.adoc
+++ b/docs/de-de/modules/payment/pages/ebics.adoc
@@ -394,7 +394,7 @@ In diesem link:https://www.plentymarkets.eu/blog/plentyCommunity-Projekt-EBICS-K
 [#220]
 === Wie benutze ich das EBICS-Plugin?
 
-Um das EBICS-Plugin nutzen zu können, muss du es zuerst im link:https://marketplace.plentymarkets.com/ebics_5098[plentyMarketplace^] herunterladen. Für die Einrichtung von EBICS musst du einige grundlegende Einstellungen in deinem plentymarkets System ausführen. Diese sind in den xref:70:70.adoc#[oberen Abschnitten dieser Handbuchseite] beschrieben.
+Um das EBICS-Plugin nutzen zu können, muss du es zuerst im link:https://marketplace.plentymarkets.com/ebics_5098[plentyMarketplace^] herunterladen. Für die Einrichtung von EBICS musst du einige grundlegende Einstellungen in deinem plentymarkets System ausführen. Diese sind in den <<#70, oberen Abschnitten dieser Handbuchseite>> beschrieben.
 
 Allgemeine Informationen zum Hinzufügen und Installieren von Plugins findest du im Abschnitt xref:plugins:plugins.adoc#[Plugins] des Handbuchs (icon:download[role="purple"]).
 
@@ -425,7 +425,7 @@ Im Log kannst du die einzelnen Schritte nachvollziehen.
 Überprüfe die folgenden Punkte:
 
 * Ist das EBICS-Konto vollständig eingerichtet?
-→ Überprüfe dies anhand der Erklärungen auf xref:70:70.adoc#[dieser Handbuchseite].
+→ Überprüfe dies anhand der Erklärungen auf <<#70, dieser Handbuchseite>>.
 * Sind die Zugangsdaten korrekt? Kommt die Fehlermeldung *EBICS_AUTHENTICATION_FAILED*, konnte eine Authentifizierung nicht stattfinden, da die Zugangsdaten fehlerhaft sind.
 * Arbeitest du mit externen Programmen, die ebenfalls Zahlungen abrufen? In diesem Fall kommen die Zahlungen nicht in deinem plentymarkets System an, da die Zahlungen nicht mehrfach abgerufen werden.
 * Nutzen Vormerkposten und Tagesumsätze das richtige Format? +
