--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -85,7 +85,7 @@ Of course, you can <<#edit-view, adjust>> these default views every time accordi
 [TIP]
 .Activating views for users
 ====
-If a user with *Back end* access in your plentymarkets system is not able to see the available templates, you might have to activate the view in the corresponding user account. To do so, go to *Setup » Settings » User » Rights » User* » Area: *Views*. Note the explanations on the xref:crm:preparatory-settings.adoc#activate-views-other-users[Carrying out the preparatory settings] page.
+If a user with *Back end* access in your plentymarkets system is not able to see the available templates, you might have to activate the view in the corresponding user account. To do so, go to *Setup » Settings » User » Rights » User* » Area: *Views*. Note the explanations on the xref:crm:preparatory-settings.adoc#activate-view-other-users[Carrying out the preparatory settings] page.
 ====
 
 //// 
@@ -511,7 +511,7 @@ Sending an email to reset the password:
 To ensure that the email to reset the password will be correctly sent to your customers, you have to save the appropriate variable in the template that you selected for the option *Send customer email to change password* in the *Setup » Client » [Select client] » Email » Automatic* menu.
 ====
 
-[#unblock-login]
+[#unlock-login]
 ==== Unlocking the contact’s login
 
 If the contact enters the wrong password in your plentyShop 4 times in a row, the contact will be blocked for the login and receives the message in the plentyShop to contact the administrator. With one click, you unlock the contact’s login and your contact is able to log into the your plentyShop again as usual.
