--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -903,9 +903,9 @@ Die verfügbaren Variablen für den EmailBuilder sind in die folgenden Kategorie
 ** <<#variablen-auftrag-auftragspositionen, Auftragspositionen (nur für Artikellisten-Widget)>>
 ** <<#variablen-auftrag-versand, Versand>>
 
-* <<#variablen-kontakt, Kontakt>>
+* <<#variablen-kontakt-allgemein, Kontakt>>
 
-** <<#variablen-kontakt, Kontaktvariablen allgemein>>
+** <<#variablen-kontakt-allgemein, Kontaktvariablen allgemein>>
 ** <<#variablen-kontakt-lieferadresse, Lieferadresse>>
 ** <<#variablen-kontakt-rechnungsadresse, Rechnungsadresse>>
 ** <<#variablen-kontakt-optionen, Optionen>>
