--- a/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
+++ b/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
@@ -908,10 +908,10 @@ Allgemeine Ticketvorlage erstellen:
 |Wähle den Mandant (Shop), für den die Vorlage gültig sein soll.
 
 | *Typ*
-|Wähle den Tickettyp, um eine Vorlage für diesen Typ zu erstellen. Tickettypen werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<crm/ticketsystem-nutzen#800, Typen &amp; Status>> erstellt.
+|Wähle den Tickettyp, um eine Vorlage für diesen Typ zu erstellen. Tickettypen werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<#800, Typen &amp; Status>> erstellt.
 
 | *Status*
-|Wähle den Ticketstatus wählen, um eine Vorlage für diesen Status zu erstellen. Ticketstatus werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<crm/ticketsystem-nutzen#900, Typen &amp; Status>> erstellt.
+|Wähle den Ticketstatus wählen, um eine Vorlage für diesen Status zu erstellen. Ticketstatus werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<#900, Typen &amp; Status>> erstellt.
 
 | *Priorität*
 |Wähle die Priorität, um eine Vorlage für diese Priorität zu erstellen.
@@ -1114,10 +1114,10 @@ Grauer Stern = niedrigste Priorität (Standardeinstellung) +
 2 gelbe Sterne = höchste Priorität
 
 | *Typ*
-|Zeigt den Typ an. Tickettypen werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<crm/ticketsystem-nutzen#800, Typen &amp; Status>> erstellt.
+|Zeigt den Typ an. Tickettypen werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<#800, Typen &amp; Status>> erstellt.
 
 | *Status*
-|Zeigt den Status an. Ticketstatus werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<crm/ticketsystem-nutzen#900, Typen &amp; Status>> erstellt.
+|Zeigt den Status an. Ticketstatus werden im Menü *Einrichtung » CRM » Ticketsystem » Einstellungen* im Tab <<#900, Typen &amp; Status>> erstellt.
 
 | *Ordner*
 |Zeigt den Ordner an. Ordner werden im Menü *Einrichtung » CRM » Ticketsystem* im Tab xref:crm:ticketsystem-nutzen.adoc#4500[Ordner] erstellt.
