--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -418,7 +418,7 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |The symbol icon:av_timer[set=material, role=darkGrey] in the column *Billed minutes* (icon:av_timer[set=material, role=darkGrey]) shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed minutes.
 
 |[#intable-overview-subscribed]*Subscribed*
-|The column icon:notifications[set=material, role=darkGrey] shows with the symbol icon:done[set=material, role=darkGrey] whether you have <<#subscribe-conversation, subscribed for>> the conversation.
+|The column icon:notifications[set=material, role=darkGrey] shows with the symbol icon:done[set=material, role=darkGrey] whether you have <<#subscribe-for-conversation, subscribed for>> the conversation.
 
 |[#intable-overview-context-menu]*Context menu*
 |Allows to edit conversations in the overview using the <<#context-menu, context menu>>.
@@ -519,7 +519,7 @@ Assigning tags to a conversation:
 [#add-tag]
 ==== Adding a tag
 
-If you could not find the tag you were looking for as described in the <<#context-menu-tags, Assigning tags>> chapter, you can create a new tag from the Messenger overview. To do so, proceed as described below.
+If you could not find the tag you were looking for as described in the <<#context-menu-tags-conversation, Assigning tags>> chapter, you can create a new tag from the Messenger overview. To do so, proceed as described below.
 
 [.instruction]
 Creating a new tag:
@@ -593,7 +593,7 @@ Subscribing for a conversation:
 . Click on icon:notifications_active[set=material, role=darkGrey] *Subscribe for conversation*. +
 → The column icon:notifications[set=material, role=darkGrey] *Subscribed* does not show the symbol icon:done[set=material, role=darkGrey] any longer.
 
-[#unsubscribe-conversation]
+[#unsubscribe-from-conversation]
 ==== Unsubscribing from a conversation
 
 Proceed as described below to unsubscribe from a conversation.
@@ -850,7 +850,7 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |The symbol icon:av_timer[set=material, role=darkGrey] in the column *Billed minutes* (icon:av_timer[set=material, role=darkGrey]) shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed minutes.
 
 |[#intable-new-messages-subscribed]*Subscribed*
-|The column icon:notifications[set=material, role=darkGrey] shows with the symbol icon:done[set=material, role=darkGrey] whether you have <<#subscribe-conversation, subscribed for>> the conversation.
+|The column icon:notifications[set=material, role=darkGrey] shows with the symbol icon:done[set=material, role=darkGrey] whether you have <<#subscribe-for-conversation, subscribed for>> the conversation.
 
 |[#intable-new-messages-context-menu]*Context menu*
 |Allows to edit conversations in the overview using the <<#context-menu, context menu>>.
@@ -868,7 +868,7 @@ You can also use the group function in the *New messages* area. The group functi
 [#my-messages]
 == My messages
 
-In the navigation on the left side of the messenger, you can find the folder icon:3p[set=material, role=darkGrey] *My messages* below the folder icon:inbox[set=material, role=darkGrey] *Inbox*. You can see all conversations here that you <<#subscribe-conversations, subscribed for>>. 
+In the navigation on the left side of the messenger, you can find the folder icon:3p[set=material, role=darkGrey] *My messages* below the folder icon:inbox[set=material, role=darkGrey] *Inbox*. You can see all conversations here that you <<#subscribe-for-conversation, subscribed for>>. 
 
 [discrete]
 [#configure-columns-my-messages]
@@ -944,7 +944,7 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |The symbol icon:av_timer[set=material, role=darkGrey] in the column *Billed minutes* (icon:av_timer[set=material, role=darkGrey]) shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed minutes.
 
 |[#intable-my-messages-subscribed]*Subscribed*
-|The column icon:notifications[set=material, role=darkGrey] shows with the symbol icon:done[set=material, role=darkGrey] whether you have <<#subscribe-conversation, subscribed for>> the conversation.
+|The column icon:notifications[set=material, role=darkGrey] shows with the symbol icon:done[set=material, role=darkGrey] whether you have <<#subscribe-for-conversation, subscribed for>> the conversation.
 
 |[#intable-my-messages-context-menu]*Context menu*
 |Allows to edit conversations in the overview using the <<#context-menu, context menu>>.
@@ -1038,7 +1038,7 @@ The xref:payment:beta-managing-payments-new.adoc#[payment] has a direct link to 
 |The symbol icon:av_timer[set=material, role=darkGrey] in the column *Billed minutes* (icon:av_timer[set=material, role=darkGrey]) shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material, role=darkGrey] to sort the table by the number of billed minutes.
 
 |[#intable-trash-subscribed]*Subscribed*
-|The column icon:notifications[set=material, role=darkGrey] shows with the symbol icon:done[set=material, role=darkGrey] whether you have <<#subscribe-conversation, subscribed for>> the conversation.
+|The column icon:notifications[set=material, role=darkGrey] shows with the symbol icon:done[set=material, role=darkGrey] whether you have <<#subscribe-for-conversation, subscribed for>> the conversation.
 
 |[#intable-trash-context-menu]*Context menu*
 |Allows to edit conversations in the overview using the <<#context-menu, context menu>>.
